--- a/Practice/css/nav-bar.css
+++ b/Practice/css/nav-bar.css
@@ -59,17 +59,18 @@
                 width: 100%;
                 height: 0;
                 background-color: rgba(255, 255, 255, 0.1);
-                backdrop-filter: blur(15px);
+                -webkit-backdrop-filter: blur(15px)!important;
+                 backdrop-filter: blur(15px)!important;
                 /* border-radius: 10px; */
                 overflow: hidden;
                 transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
         }
 
         .dropdown_menu.open{
-            height: 240px;
+            height: 25vh;
         }
         .dropdown_menu li {
-            padding: 0.7rem;
+            padding: 0.6rem;
             display: flex;
             justify-content:first baseline;
             align-items: center;
@@ -77,13 +78,14 @@
         }
         .dropdown_menu a,i{
             color: white;
+            font-size: 1rem;
         }
 
-        .dropdown_menu .action_btn {
+        /* .dropdown_menu .action_btn {
             width: 100%;
             display: flex;
             justify-content: center;
-        }
+        } */
 
 
         .nav-bar i{
